--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Prerequisites
 *.d
+*.c
+!certificates.c
 
 # Object files
 *.o
@@ -18,7 +20,6 @@
 
 # Libraries
 *.lib
-*.a
 *.la
 *.lo
 
@@ -50,3 +51,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+.vscode/
+build
+
